force-app/main/default/objects/IWAG_Scorecard__c/IWAG_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Captures aggregated advisor performance across key pillars including Client Engagement, Revenue &amp; Growth, Advisor Quality, and Adoption. Used to track monthly advisor scorecard results.</description>
    <label>IWAG Scorecard</label>
    <nameField>
        <label>Jane Doe - May 2026</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IWAG Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>