force-app/main/default/objects/IWAG_Scorecard__c/fields/Activity_Logged__c.field-meta.xml
<CustomField>
    <fullName>Activity_Logged__c</fullName>
    <inlineHelpText>Total calls + emails + tasks logged</inlineHelpText>
    <label>Activity Logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>