force-app/main/default/objects/IWAG_Scorecard__c/fields/Adoption_Rag__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Rag__c</fullName>
    <formula>IF(
  Adoption_Score_Activity_Driven__c &gt; 95,
  &quot;Green&quot;,
  IF(
    Adoption_Score_Activity_Driven__c &gt; 85,
    &quot;Amber&quot;,
    &quot;Red&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adoption Rag</label>
    <type>Text</type>
</CustomField>