force-app/main/default/objects/IWAG_Scorecard__c/fields/Adoption_Score__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Score__c</fullName>
    <label>Adoption Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>