force-app/main/default/objects/IWAG_Scorecard__c/fields/Adoption_Score_Activity_Driven__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Score_Activity_Driven__c</fullName>
    <formula>MIN(
  100,
  (Salesforce_Logins__c * 2) +
  (Activity_Logged__c * 1) +
  IF(Navigator_Used__c, 20, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adoption Score (Activity Driven)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>