force-app/main/default/objects/IWAG_Scorecard__c/fields/Advisor_Quality__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Quality__c</fullName>
    <label>Advisor Quality</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>