force-app/main/default/objects/IWAG_Scorecard__c/fields/Advisor_Quality_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Quality_Indicator__c</fullName>
    <formula>CASE(
Advisor_Quality_RAG__c,
&quot;Green&quot;,
IMAGE(
&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Green_circle.svg/1024px-Green_circle.svg.png&quot;,
&quot;Green&quot;,
15,
15
),
&quot;Amber&quot;,
IMAGE(
&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Orange_circle.svg/1024px-Orange_circle.svg.png&quot;,
&quot;Amber&quot;,
15,
15
),
&quot;Red&quot;,
IMAGE(
&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Red_circle.svg/1024px-Red_circle.svg.png&quot;,
&quot;Red&quot;,
15,
15
),
&quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Quality Indicator</label>
    <type>Text</type>
</CustomField>