force-app/main/default/objects/IWAG_Scorecard__c/fields/Advisor_Quality_RAG__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Quality_RAG__c</fullName>
    <formula>IF(
  Advisor_Quality_Score_Activity_Driven__c &gt; 95,
  &quot;Green&quot;,
  IF(
    Advisor_Quality_Score_Activity_Driven__c &gt; 85,
    &quot;Amber&quot;,
    &quot;Red&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Quality RAG</label>
    <type>Text</type>
</CustomField>