force-app/main/default/objects/IWAG_Scorecard__c/fields/Advisor_Quality_Score_Activity_Driven__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Quality_Score_Activity_Driven__c</fullName>
    <formula>ROUND(
(
Retention_Rate__c * 100 * 0.6 +
Clients_Engaged_Period__c * 100 * 0.4
),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Quality Score(Activity Driven)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>