force-app/main/default/objects/IWAG_Scorecard__c/fields/Client_Engagement_RAG__c.field-meta.xml
<CustomField>
    <fullName>Client_Engagement_RAG__c</fullName>
    <formula>IF(
  Client_Engagement_Score_c__c &gt;= 95,
  &quot;Green&quot;,
  IF(
    Client_Engagement_Score_c__c &gt;= 85,
    &quot;Amber&quot;,
    &quot;Red&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Engagement RAG</label>
    <type>Text</type>
</CustomField>