force-app/main/default/objects/IWAG_Scorecard__c/fields/Client_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Engagement_Score__c</fullName>
    <inlineHelpText>“Final normalized Client Engagement score used in overall IWAG calculation.”</inlineHelpText>
    <label>Client Engagement Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>