force-app/main/default/objects/IWAG_Scorecard__c/fields/Client_Engagement_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Engagement_Score_c__c</fullName>
    <formula>MIN(100,(Total_Calls_Logged__c * 2) + (Total_Emails_Logged__c * 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from logged calls and emails for demo purposes only</inlineHelpText>
    <label>Client Engagement Score(Activity Driven)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>