force-app/main/default/objects/IWAG_Scorecard__c/fields/Clients_Engaged_Period__c.field-meta.xml
<CustomField>
    <fullName>Clients_Engaged_Period__c</fullName>
    <formula>IF(
  Total_Clients_Period_End__c &gt; 0,
  Engaged_Clients__c / Total_Clients_Period_End__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Clients Engaged(Period)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>