force-app/main/default/objects/IWAG_Scorecard__c/fields/Engaged_Clients__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Clients__c</fullName>
    <inlineHelpText>Engaged Clients are clients with recent interactions/managed accounts</inlineHelpText>
    <label>Engaged Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>