force-app/main/default/objects/IWAG_Scorecard__c/fields/Navigator_Used__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether advisor actively used Navigator/core platforms</inlineHelpText>
    <label>Navigator Used</label>
    <type>Checkbox</type>
</CustomField>