force-app/main/default/objects/IWAG_Scorecard__c/fields/Overall_Rating_KPI__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating_KPI__c</fullName>
    <formula>IF(
  Overall_Score_KPI__c &gt; 95,
  &quot;Green&quot;,
  IF(
    Overall_Score_KPI__c &gt; 85,
    &quot;Amber&quot;,
    &quot;Red&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Rating (KPI)</label>
    <type>Text</type>
</CustomField>