force-app/main/default/objects/IWAG_Scorecard__c/fields/Overall_Score_KPI__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_KPI__c</fullName>
    <formula>(
Client_Engagement_Score__c * 0.30 +
Revenue_Growth__c * 0.30 +
Advisor_Quality__c * 0.25 +
Adoption_Score__c * 0.15
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score (KPI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>