force-app/main/default/objects/IWAG_Scorecard__c/fields/Retention_Rate__c.field-meta.xml
<CustomField>
    <fullName>Retention_Rate__c</fullName>
    <formula>IF(
  Total_Clients_Start_of_Period__c &gt; 0,
  Total_Clients_Period_End__c / Total_Clients_Start_of_Period__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>