force-app/main/default/objects/IWAG_Scorecard__c/fields/Revenue_Current_Period__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Current_Period__c</fullName>
    <inlineHelpText>Revenue for the current scorecard period</inlineHelpText>
    <label>Revenue_Current Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>