force-app/main/default/objects/IWAG_Scorecard__c/fields/Revenue_Growth__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth__c</fullName>
    <label>Revenue &amp; Growth</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>