force-app/main/default/objects/IWAG_Scorecard__c/fields/Revenue_Growth_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_c__c</fullName>
    <formula>IF(
  Revenue_Prior_Period__c &gt; 0,
  (Revenue_Current_Period__c - Revenue_Prior_Period__c) / Revenue_Prior_Period__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>