force-app/main/default/objects/IWAG_Scorecard__c/fields/Revenue_Growth_RAG__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_RAG__c</fullName>
    <formula>IF(
  Revenue_Growth_Score__c &gt; 95,
  &quot;Green&quot;,
  IF(
    Revenue_Growth_Score__c &gt; 85,
    &quot;Amber&quot;,
    &quot;Red&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue &amp; Growth RAG</label>
    <type>Text</type>
</CustomField>