force-app/main/default/objects/IWAG_Scorecard__c/fields/Revenue_Growth_Score__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_Score__c</fullName>
    <formula>IF(
  Revenue_Growth_c__c &gt;= 0.10, 100,
  IF(
    Revenue_Growth_c__c &gt;= 0.05, 90,
    IF(
      Revenue_Growth_c__c &gt;= 0.00, 75,
      IF(
        Revenue_Growth_c__c &gt;= -0.05, 60,
        40
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue &amp; Growth Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>