force-app/main/default/objects/IWAG_Scorecard__c/fields/Revenue_Prior_Period__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Prior_Period__c</fullName>
    <inlineHelpText>Revenue from previous period (baseline for growth)</inlineHelpText>
    <label>Revenue_Prior Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>