force-app/main/default/objects/IWAG_Scorecard__c/fields/Salesforce_Logins__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Logins__c</fullName>
    <inlineHelpText>Number of Salesforce logins during the scorecard period</inlineHelpText>
    <label>Salesforce Logins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>