force-app/main/default/objects/IWAG_Scorecard__c/fields/Scorecard_Key__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Key__c</fullName>
    <inlineHelpText>&quot;Unique key: AdvisorId-YYYY-MM. Used to prevent duplicate monthly scorecards.”</inlineHelpText>
    <label>Scorecard Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>