force-app/main/default/objects/IWAG_Scorecard__c/fields/Scorecard_Month__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Month__c</fullName>
    <description>Month this scorecard applies to (use first day of month).</description>
    <label>Scorecard Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>