force-app/main/default/objects/IWAG_Scorecard__c/fields/Total_Clients_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients_Period_End__c</fullName>
    <inlineHelpText>Total Number of clients at end of period</inlineHelpText>
    <label>Total Clients (Period End)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>