force-app/main/default/objects/IWAG_Scorecard__c/fields/Total_Clients_Start_of_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients_Start_of_Period__c</fullName>
    <inlineHelpText>Total number of active clients at period start</inlineHelpText>
    <label>Total Clients (Start of Period)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>