force-app/main/default/objects/IWAG_Scorecard__c/fields/Total_Emails_Logged__c.field-meta.xml
<CustomField>
    <fullName>Total_Emails_Logged__c</fullName>
    <inlineHelpText>Total advisor emails logged for the period</inlineHelpText>
    <label>Total Emails Logged</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>